常规同步